# munki-backend

./: .env.example  .gitignore  Cargo.toml  Procfile  docker-compose.yml  justfile  readme.md  start.sh
.github/workflows/: github-actions-demo.yml
api-docs/: http-client.env.json  price.http
rest-api/: Cargo.toml
rest-api/migrations/: 20250310164809_create_token_meta_table.sql  20250311155211_create_feargreed_table.sql  20250312072223_create_token_metric.sql  20250314073749_create_blockchain_volume.sql  20250314095700_create_token_prices.sql  20250316122012_create_gaf_history.sql  20250316122318_create_gaf_history.sql  20250316151431_add_non_null_name_symbol.sql  20250316151837_add_token_volume_history.sql  20250318140142_add_market_movers.sql  20250319024645_add_total_supply.sql  20250319164636_drop_unique_market_mover_transaction.sql  20250320040646_add_token_watching_queue.sql  20250320063343_add_pk_token.sql  20250320074134_add_colum_marketcap_price_change.sql  20250320143014_create_alpha_move_metric.sql  20250328064919_add_column_liquidity_and_risk_score.sql  20250328135822_create_risk_score.sql  20250328170349_create_token_analytics_table.sql  20250330105747_add_mover_logo.sql  20250330130329_add_volume_24h_to_tokens.sql  20250331160647_add_volume_24h_change_to_tokens.sql  20250331162528_add_holders_to_tokens.sql  20250331171626_add_liquidity_to_tokens.sql  20250401081953_edit_volume_24h_change_to_tokens.sql  20250402144505_add_token_watch_last_active.sql
rest-api/src/: alpha_move.rs  app.rs  config.rs  main.rs  response.rs  time_util.rs  volume.rs  webhook.rs
rest-api/src/alpha_move/: mod.rs  route.rs  token_score.rs  transaction.rs
rest-api/src/fearandgreed/: formula.rs  mod.rs  route.rs
rest-api/src/jobs/: mod.rs
rest-api/src/price/: history.rs  mod.rs  route.rs
rest-api/src/token/: analytics.rs  background_job.rs  distributions.rs  health.rs  last_active.rs  market.rs  mod.rs  model.rs  route.rs  search.rs  trade.rs  trending.rs
rest-api/src/wallet/: mod.rs  whale.rs
