[workspace]
members = ["common", "rest-api"]
resolver = "2"

[workspace.dependencies]
#async
futures = "0.3.31"
tokio = { version = "1.42.0", features = ["full"] }

#web
axum = "0.8.1"
envconfig = "0.11.0"

serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.95"

tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"

#httpclient
reqwest = { version = "0.12", features = ["json"] }

