[package]
name = "rest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }

futures = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
envconfig = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
http-body-util = "0.1.0"
reqwest = { workspace = true }
sqlx = { version = "0.8.3", features = [
  "postgres",
  "runtime-tokio",
  "tls-native-tls",
  "bigdecimal",
  "chrono"
] }
serde_json = "1.0.139"
moka = { version = "0.12.10", features = ["future"] }
query_params = "0.1.0"
bigdecimal = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.13.0"
chrono = "0.4.40"
log = "0.4.26"
